# nx-notifications-applet

./: .travis.yml  CMakeLists.txt  README.md
debian/: README.Debian  README.source  changelog  control  copyright  postinst  postrm
lib/: CMakeLists.txt
package/: Messages.sh  metadata.desktop
package/contents/config/: config.qml  main.xml
package/contents/ui/: Devicenotifier.qml  Jobs.qml  Notifications.qml  ScreenPositionSelector.qml  ThumbnailStrip.qml  configNotifications.qml  main.qml
plugin/: CMakeLists.txt  notificationshelperplugin.cpp  qmldir
